tests/accept/identifier.ul
void main() {
    _;
    a;
    abc;
    ABC;
    aB;
    a0123;
    a01Accg__;
    ____asdsf332525___DFFff;
    a_B_0_;
}
