tests/reject/bad_void_array_2.ul
void[10] foo() {}
void main() {}